--- a/Css/style.css
+++ b/Css/style.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@300;400;500;600;700&display=swap');
 *{
     margin: 0;
     padding: 0;
-
+    font-family: "Exo+2";
 }
 
 body{
@@ -100,12 +101,19 @@ margin-top: -23px;
     
 }
 
-.projetos h5{
+
+.Portfolio h5{
     color: #5ccda7;
     font-size: 30px;    
 margin-left: 800px;
+margin-top: 30px;
+ }
+ 
+.Portfolio h2{
+    color:#FFFFFF;
+    font-size: 20px;    
+margin-left: 120px;
 margin-top: 60px;
-   
     
 }
 
@@ -351,4 +359,57 @@ margin-left: 30px;
     margin-right: 20px ;
 }
 
+
+.Skills h1{
+    color: #FFFFFF;
+    font-size: 20px;    
+    margin-left: 120px;
+    margin-top: 60px;
+}
+
+
+.Skills h2{
+    color: #5ccda7;
+    font-size: 30px;    
+margin-left: 750px;
+margin-top: 30px;
+ }
+ 
+
+ .imgskills {
+    width: 100vw;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+
+ .img-skills{
+     margin-top: 50px;
+     margin-right: 30px;
+ }
+
+
+ .Contato h1 {
+    color: #FFFFFF;
+    font-size: 20px;    
+    margin-left: 120px;
+    margin-top: 100px;
+ }
+
+ .Contato h2 {
+    color: #5ccda7;
+ font-size: 30px;    
+margin-left: 750px;
+margin-top: 30px;
+ }
+
+ .Contato button{
+    width: 246px;
+    height: 60px;
+    border-radius: 16px;
+    color: #FFFFFF;
+    background-color: #006414;
+   
+ }
 
